--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-matplotlib==3.9.1
-numpy==1.24.3
-plotly==6.1.0
-streamlit==1.45.1
-streamlit-extras==0.7.1
+matplotlib
+numpy
+plotly
+streamlit
+streamlit-extras
 textblob
-textblob-fr==0.2.0
+textblob-fr
